# sensoredlife-homeassistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: validate.yml
brand/: README.md
custom_components/sensoredlife/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  models.py  quality_scale.yaml  sensor.py  strings.json
custom_components/sensoredlife/translations/: en.json
docs/: reference_pyscript_scraper.py
tests/: conftest.py  test_api.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_models.py
tests/fixtures/: devices.json
