# Tool configuration only — the integration itself is loaded by Home
# Assistant from custom_components/sensoredlife/, not pip-installed. There
# is intentionally no [project] section here.

[tool.ruff]
line-length = 88
# Must match the OLDEST supported interpreter (HA 2024.12 = Python 3.12),
# not the newest: under py314, ruff format rewrites `except (A, B):` into
# the 3.14-only unparenthesized form — a SyntaxError on every older HA
# (the regression that shipped in visiblair 0.6.2).
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-too-long — defer to ruff format
    "SIM108", # ternary-instead-of-if — clarity sometimes beats brevity
    "RUF001", # ambiguous-unicode-character-string — em/en dashes in prose
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # pytest uses assert intentionally

[tool.mypy]
# Stays at 3.14 (NOT the support floor): mypy parses the installed current
# HA source, which itself uses 3.14-only syntax, so it cannot target the
# floor. The floor is enforced by ruff target-version and CI instead.
python_version = "3.14"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous",
    "pytest",
    "pytest_homeassistant_custom_component.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
